--- a/body/brainstorming.tex
+++ b/body/brainstorming.tex
@@ -140,7 +140,7 @@ We finally get the expresion
 
 
 %===============================================================
-\subsubsection{Setting \& energy-momentum tensor: curved background}
+\subsection{Setting \& energy-momentum tensor: curved background}
 %=================================================================
 %
 
@@ -310,7 +310,7 @@ Matching to the perfect fluid expression $T_{\mu\nu}=(\rho+p)u_\mu u_\nu + p g_{
 
 %---------------------------------------------------------
 %=================================================================
-\section{Fluctuations: flat background}
+\section{Fluctuations}
 %=================================================================
 %--------------------------------------------------------------
 
@@ -1001,11 +1001,12 @@ In this case, \emph{assuming the second principle} and thermodynamic stability\f
 we immeditaley find that $c_s^2 - c_a^2 \leq 0$ in the phantom regime.
 \smallskip
 
----------------- IGNORE --------------------------------------------------------
+
 
 %----------------------------------------------------------------------
 {\color{gray}
-Finally we translate everything into a condition on $F(b,Y)$. \todotag{Computations likely wrong, redo in terms of $\mathfrak{a}$}
+--------------------------------------- IGNORE --------------------------------------------------------
+Finally we translate everything into a condition on $F(b,Y)$. \todotag{Computations likely wrong, redo in terms of specific $\mathfrak{a}$}
 Recall the relations $b=n$, $Y=T$ and 
 \begin{align}
     \rho&= Y\partial_YF-F,\quad P=F-b\partial_bF,\quad \sigma=\tfrac{\rho+p}{Tn} = \tfrac{Y \partial_Y F - b \partial_b F}{Y b},
